--- a/index.html
+++ b/index.html
@@ -64,11 +64,17 @@
           <h2 class="visually-hidden">effective business strategy</h2>
           <ul class="list display-style">
             <li class="list-style">
+              <div class="svg-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1-1"></use>
+                </svg>
+              </div>
               <h3 class="title-of-headers">Strategy</h3>
               <p class="paragraphs">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
+            
             </li>
             <li class="list-style">
               <h3 class="title-of-headers">Punctuality</h3>
