--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
-            
             </li>
             <li class="list-style">
+              <div class="svg-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1-1"></use>
+                </svg>
+              </div>
               <h3 class="title-of-headers">Punctuality</h3>
               <p class="paragraphs">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +88,11 @@
               </p>
             </li>
             <li class="list-style">
+              <div class="svg-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1-1"></use>
+                </svg>
+              </div>
               <h3 class="title-of-headers">Diligence</h3>
               <p class="paragraphs">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +100,11 @@
               </p>
             </li>
             <li class="list-style">
+              <div class="svg-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1-1"></use>
+                </svg>
+              </div>
               <h3 class="title-of-headers">Technologies</h3>
               <p class="paragraphs">
                 Design practice focused on digital experiences. We bring forth a
