social network icons

--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
               <div class="points-style">
                 <h3 class="section-header centre">Mark Guerrero</h3>
                 <p class="paragraphs centre">Product Designer</p>
+                <ul class="list list-social-network">
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg width="40" height="40">
+                        <use href="./images/icons.svg#icon-Ellipse"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-points">
