section four finished

--- a/index.html
+++ b/index.html
@@ -159,7 +159,28 @@
                   <li class="point-social-network">
                     <a class="link-style" href="">
                       <svg class="icons" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -175,6 +196,36 @@
               <div class="points-style">
                 <h3 class="section-header centre">Tom Ford</h3>
                 <p class="paragraphs centre">Frontend Developer</p>
+                <ul class="list list-social-network">
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-points">
@@ -186,6 +237,36 @@
               <div class="points-style">
                 <h3 class="section-header centre">Camila Garcia</h3>
                 <p class="paragraphs centre">Marketing</p>
+                <ul class="list list-social-network">
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-points">
@@ -197,6 +278,36 @@
               <div class="points-style">
                 <h3 class="section-header centre">Daniel Wilson</h3>
                 <p class="paragraphs centre">UI Designer</p>
+                <ul class="list list-social-network">
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="point-social-network">
+                    <a class="link-style" href="">
+                      <svg class="icons" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
