--- a/index.html
+++ b/index.html
@@ -313,6 +313,20 @@
           </ul>
         </div>
       </section>
+      <section class="section-five">
+        <div class="container">
+          <h2 class="header-section-three">Customers</h2>
+          <ul class="list list-section-five">
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
