--- a/index.html
+++ b/index.html
@@ -324,6 +324,41 @@
                 </svg>
               </a>
             </li>
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-customers">
+              <a class="link-style-customer" href="">
+                <svg class="icons-customer" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
