--- a/index.html
+++ b/index.html
@@ -364,14 +364,49 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html"
-          >Web<span class="studio-footer">Studio</span>
-        </a>
-        <p class="paragraph-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container icons-footer">
+        <div class="logo-and-p">
+          <a class="logo-footer link" href="./index.html"
+            >Web<span class="studio-footer">Studio</span>
+          </a>
+          <p class="paragraph-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="p-social-media">Social media</p>
+          <ul class="list list-social-media">
+            <li class="point-social-network">
+              <a class="link-style" href="">
+                <svg class="icons-socialmedia" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-social-network">
+              <a class="link-style" href="">
+                <svg class="icons-socialmedia" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-social-network">
+              <a class="link-style" href="">
+                <svg class="icons-socialmedia" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="point-social-network">
+              <a class="link-style" href="">
+                <svg class="icons-socialmedia" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
