--- a/index.html
+++ b/index.html
@@ -378,28 +378,28 @@
           <p class="p-social-media">Social media</p>
           <ul class="list list-social-media">
             <li class="point-social-network">
-              <a class="link-style" href="">
+              <a class="link-style other-style" href="">
                 <svg class="icons-socialmedia" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="point-social-network">
-              <a class="link-style" href="">
+              <a class="link-style other-style" href="">
                 <svg class="icons-socialmedia" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="point-social-network">
-              <a class="link-style" href="">
+              <a class="link-style other-style" href="">
                 <svg class="icons-socialmedia" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="point-social-network">
-              <a class="link-style" href="">
+              <a class="link-style other-style" href="">
                 <svg class="icons-socialmedia" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
