--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
           </ul>
           <ul class="portfolio-card-set">
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   class="card_image"
                   src="./images/BankingAppInterfaceConcept.jpg"
@@ -78,7 +78,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/CashlessPayment.jpg"
                   alt="Picture shows cashless payment by the phone"
@@ -91,7 +91,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/MeditationApp.jpg"
                   alt="Picture shows the computer and phone with meditation slogan"
@@ -104,7 +104,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/TaxiService.jpg"
                   alt="Picture of the phone using inside the car"
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/ScreenIllustrations.jpg"
                   alt="Picture of phones wallpapers"
@@ -130,7 +130,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/OnlineCourses.jpg"
                   alt="Picture of smiling girl with her phone"
@@ -143,7 +143,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/InstagramStoriesConcept.jpg"
                   alt="Picture of project of instagram stories"
@@ -156,7 +156,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/OrganicFood.jpg"
                   alt="Picture of fruit and vegetables in a bag"
@@ -169,7 +169,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="link" href="">
+              <a class="link link-portfolio" href="">
                 <img
                   src="./images/FreshCoffee.jpg"
                   alt="Picture of preparation of the fresh coffee"
